<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:paddingTop="50dp"
    android:paddingBottom="0dp"
    tools:context=".Medical.CreateMedId">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ht3_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ht3_caption"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/online_african_american_doctor_medical_consultation_vector_illustration_311563_477_removebg_preview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:inputType="textPersonName"
            android:hint="@string/ht3_hint_name"
            android:padding="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:hint="@string/ht3_hint_birthday"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/ht3_hint_height"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2.5dp"


                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/ht3_hint_weight"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2.5dp"
                />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:hint="@string/ht3_hint_blood"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2.5dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:hint="@string/ht3_hint_blood"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2.5dp"
            />

        <Button
            android:id="@+id/medIdBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="10dp"
            android:text="@string/ht3_btn_submit"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>