<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    android:paddingTop="50dp"
    android:paddingBottom="0dp"
    tools:context=".Medical.MedicalId">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ht4_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ht4_caption"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardWhite"
        app:cardElevation="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:src="@drawable/anonymous_user_circle_icon_vector_18958255_removebg_preview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingRight="10dp"
                    android:text="@string/ht4_name"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/medName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Danuja Jayasuriya"
                    android:textColor="@color/grey"
                    android:textSize="15dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingRight="10dp"
                    android:text="@string/ht4_Age"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="25"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingRight="10dp"
                    android:text="@string/ht4_height"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="180 CM"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingRight="10dp"
                    android:text="@string/ht4_weight"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="88 Kg"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingRight="10dp"
                    android:text="@string/ht4_blood"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/bGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="B +"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:shadowColor="@color/grey"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1.5"
                    android:text="@string/ht4_info"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/medInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do "
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="13dp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateMed"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellowBtn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ht4_btn_update"
            android:textSize="15sp" />

        <Button
            android:id="@+id/deleteMed"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/redBtn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ht4_btn_delete"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>